# TRINA-WPI-2.0

./: README.md
TrinaPointAndClick/: README.md  point_and_click_controller.py  runAll.sh
TrinaPointAndClick/src/TrinaPointAndClick/: AuxCameraDisplay.cpp  AuxCameraDisplay.h  CMakeLists.txt  calibration_params.yml  main.cpp  package.xml
TrinaPointAndClick/src/TrinaPointAndClick/launch/: TrinaPointAndClickUI.launch
TrinaPointAndClick/src/TrinaPointAndClick/msg/: Marker.msg  MarkerArray.msg
TrinaPointAndClick/src/TrinaPointAndClick/scripts/: Marker_List_Node.py
TrinaPointAndClick/src/TrinaVideo/: CMakeLists.txt  main.cpp  package.xml
TrinaPointAndClick/src/TrinaVideo/launch/: TrinaVideo.launch
gui/: gui.html  style.css
hospital_gazebo/worlds/: empty_hospital.world  hospital_small_simplified_blocks.world
moveit_demo/: CMakeLists.txt  moveit_demo.launch  package.xml
moveit_demo/src/: moveit_demo.cpp
pick_and_place/: CMakeLists.txt  GazeboGraspFix.cpp  README.md  package.xml
pick_and_place/launch/: arm_to_block.launch  grasp.launch  pick_place.launch
pick_and_place/src/: arm_to_block - working no sm.cpp  arm_to_block.cpp  arm_to_block_sm.cpp  grasp_generator.cpp  init_blocks.cpp  object_publisher.cpp  pick_and_place.cpp  pick_n_place.cpp  pnp_cheat.cpp  pnp_demo.cpp  right_arm_pnp.cpp  state_machine.cpp
pick_and_place/srv/: GraspSrv.srv  PickSrv.srv  RecoverSrv.srv
trina2_gazebo/launch/: trina2_blocks.launch
trina2_moveit_config/launch/: trajectory_execution.launch.xml
